# job-runner

./: .gitignore  README.md  README.rst  newjob.sh  openstack-common.conf  setup.cfg  setup.py  test_job.sh
conf/: jobrunner.conf.sample
jobrunner/: jobpublisher.py  jobqueue.py  jobworker.py
jobrunner/openstack/common/: gettextutils.py  jsonutils.py  log.py
jobrunner/utils/: smtp.py
jobs/: openstack_create_instance.sh  openstack_delete_instance.sh
scripts/: cloudbase-job-publisher  cloudbase-job-queue  cloudbase-job-worker
