[metadata]
name = job-runner
version = 0.1
summary = Lightweight job runner
description-file =
    README.rst
author = Cloudbase Solutions Srl
author-email = info@cloudbase.it
home-page = http://cloudbase.it/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    jobrunner
    jobrunner.openstack
    jobrunner.openstack.common
    jobrunner.utils

[entry_points]
console_scripts =
    cloudbase-job-publisher=jobrunner.jobpublisher:main
    cloudbase-job-queue=jobrunner.jobqueue:main
    cloudbase-job-worker=jobrunner.jobworker:main

[hooks]
setup-hooks =
    pbr.hooks.setup_hook


